# waseda-time-series-analysis

./: Makefile  README.md  pyproject.toml
notebooks/: PS1_liamtessendorf.ipynb
tsa/: __init__.py  dataset.py  features.py  plots.py
tsa/modeling/: predict.py  train.py
